# qaa-airtype

./: AUTO_MUTE_FEATURE.md  PR_DESCRIPTION.md  README.md  REFACTORING.md  build.ps1  pyproject.toml  requirements.txt  run_airbyte.bat
docs/: index.html
src/: __init__.py  audio.py  cf_client.py  clipboard.py  config.py  keyboard.py  keyword_pipeline.py  remote_server.py  state.py  utils.py  web_routes.py
tests/: test_keyword_pipeline.py
